out/production/Jnotebook/batch/error_pokemon.txt
pokemon.java:2: error: <identifier> expected
 public class "+name+"{ 
             ^
1 error
